--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.21.1",
+    "lodash": "^4.17.21",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-scripts": "4.0.1"
+    "react-redux": "^7.2.4",
+    "react-scripts": "4.0.1",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "faker": "^5.4.0",
